[package]
name = "pyhtml2pdf"
version = "0.1.0"
edition = "2021"

[lib]
name = "_pyhtml2pdf"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "macros"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4.29"
once_cell = "1.21.3"
headless_chrome = { version = "1.0", features = ["fetch"] }
url = "2.5"
base64 = "0.22"

[profile.release]
lto = true
codegen-units = 1
