[package]
name = "pyhtml2pdf"
version = "0.1.0"
edition = "2024"

[lib]
name = "_pyhtml2pdf"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "macros"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
once_cell = "1.21.3"
headless_chrome = { version = "1.0", features = ["fetch"] }
base64 = "0.22"
rayon = "1.8"

[profile.release]
lto = true
codegen-units = 1
